# bls

./: .gitignore  .gitmodules  Correctness.md  GROTH16_TODO.md  README.md  RustGroth16Correctness.md  SimpleZKPExample.md  ZerojAudit.md  article1.md  article2.md
cli/: Cargo.toml  README.md
cli/interoperability/: interoperability.rs
cli/interoperability/aiken/: aiken.toml
cli/interoperability/sk_to_scalar/: aiken.toml
cli/src/: common.rs  lib.rs  main.rs
cli/src/cmd/: add.rs  compress.rs  div.rs  generate_seed.rs  hkdf.rs  inv.rs  mod.rs  mul.rs  neg.rs  pairing.rs  pk.rs  scalar.rs  sig.rs  uncompress.rs  verify.rs
cli/tests/: cli.rs
groth16-prover/: Cargo.toml  MPC_Ceremony_Research.md  README.md  RustGroth16Correctness.md  SimpleZKPExample.md  convert_mimc.py
groth16-prover/benchmarks/zeroj/: ZerojBenchmark.java
groth16-prover/circom/: README.md  input.json  multiplier.circom
groth16-prover/circom/Blake2b224Preimage/: README.md  blake2b.circom  blake2b224.circom  blake2b224_preimage.circom  input.json  witness.wtns
groth16-prover/circom/CardanoKeyOwnership/: README.md  cardano_key_ownership.circom  escalarmulfix_jubjub.circom  jubjub_primitives.circom  test_jubjub_pbk.circom  test_pbk_clone.circom
groth16-prover/circom/Ed25519Verify/: README.md  batchverify.circom  chunkify.circom  ed25519_verify.circom  gen_verify_input.py  gen_verify_invalid_input.py  lt.circom  modulus.circom  package-lock.json  package.json  pointcompress.circom  test_modinv.circom  test_pointcompress.circom  test_pointcompress_bad.json  verify.circom  witness.json  witness_pc.json  witness_pc_base.json
groth16-prover/circom/EdDSAJubJub/: README.md  eddsa_jubjub.circom  escalarmulfix_jubjub.circom  gen_pedersen_bases.py  gen_test_vectors.py  helpers_jubjub.py  jubjub.circom  jubjub_primitives.circom  package-lock.json  package.json  pointbits_jubjub.circom  scalarmul_jubjub.circom  test_b2p.circom  test_pbk_only.circom  test_pointbits.circom  test_scalarmul.circom
groth16-prover/circom/PoseidonMerkle/: README.md  poseidon_merkle.circom  poseidon_merkle_depth2.circom
groth16-prover/circom/PoseidonPreimage/: README.md  input.json  poseidon_bls12_381.circom  poseidon_bls12_381_t6.circom  (+6 more)
groth16-prover/cli/: Cargo.toml  README.md
groth16-prover/src/: ceremony.rs  circom_adapter.rs  engine.rs  lib.rs  mimc.rs  phase2.rs  privacy_inputs.rs  prover.rs  ptau.rs  qap.rs  r1cs.rs  sparse_merkle_tree.rs
groth16-prover/test_data/: pot4_final.ptau
(+97 files in other folders)
